--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: ^3.11.0
 
 dependencies:
+  cloud_firestore: ^6.1.2
+  firebase_auth: ^6.1.4
+  firebase_core: ^4.4.0
   flutter:
     sdk: flutter
 
